--- a/notebooks/02_data_cleaning.ipynb
+++ b/notebooks/02_data_cleaning.ipynb
@@ -58,6 +58,83 @@
     "outliers = ((num_df < (Q1 - 1.5 * IQR)) | (num_df > (Q3 + 1.5 * IQR))).sum()\n",
     "print(\"\\nOutliers per numeric column (IQR method):\\n\", outliers)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bef6d231",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Missing values after imputation:\n",
+      " order_id       0\n",
+      "customer_id    0\n",
+      "order_date     0\n",
+      "price          0\n",
+      "quantity       0\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_37659/851931473.py:17: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  df['order_date'] = df['order_date'].fillna(method='ffill')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4️⃣ Define and apply imputation\n",
+    "\n",
+    "# Convert order_date to datetime\n",
+    "df['order_date'] = pd.to_datetime(df['order_date'])\n",
+    "\n",
+    "# Imputation rules\n",
+    "median_price = df['price'].median()\n",
+    "median_qty   = df['quantity'].median()\n",
+    "\n",
+    "df['price']    = df['price'].fillna(median_price)\n",
+    "df['quantity'] = df['quantity'].fillna(median_qty)\n",
+    "\n",
+    "# For customer_id, use a placeholder\n",
+    "df['customer_id'] = df['customer_id'].fillna('UNKNOWN')\n",
+    "\n",
+    "# Forward‑fill any missing dates\n",
+    "df['order_date'] = df['order_date'].fillna(method='ffill')\n",
+    "\n",
+    "# Verify no missing values remain\n",
+    "print(\"\\nMissing values after imputation:\\n\", df.isnull().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cff09950",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned data written to ../data/processed/cleaned_transactions.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5️⃣ Save cleaned data\n",
+    "import os\n",
+    "\n",
+    "os.makedirs(\"../data/processed\", exist_ok=True)\n",
+    "clean_path = \"../data/processed/cleaned_transactions.csv\"\n",
+    "df.to_csv(clean_path, index=False)\n",
+    "\n",
+    "print(f\"Cleaned data written to {clean_path}\")\n"
+   ]
   }
  ],
  "metadata": {
